moved game result to bottom to avoid shifting cards down and to make it more visible

--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -93,6 +93,10 @@ h1 {
 
 
 #winner-container {
+  position: absolute;
+  bottom: 150px;
+  left: 50%;
+  transform: translateX(-50%);
   font-size: 2rem;
   color: yellow;
 }
